[package]
name = "nsq-in-rust"
version = "0.1.0"
authors = ["belltoy <belltoy@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
futures = "0.3"
hyper = "0.13"
serde = "1"
serde_json = "1"
serde_derive = "1"
bytes = "0.5"
byteorder = "1"
hostname = "0.1"
pin-project = "0.4"
log = "0.4"
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.1", optional = true }
snap = { version = "1", optional = true }
flate2 = { version = "1", optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["full"]
full = ["tls", "snappy", "deflate"]
snappy = ["snap"]
deflate = ["flate2"]
tls = ["tokio-native-tls", "native-tls"]
