[package]
name = "nsq-in-rust"
version = "0.1.0"
authors = ["belltoy <belltoy@gmail.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["net", "codec"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
bytes = "1"
byteorder = "1"
hostname = "0.1"
pin-project = "1.0.10"
tracing = "0.1"
tokio-native-tls = { version = "0.3", optional = true }
tokio-rustls = { version = "0.23", optional = true }
flate2 = { version = "1", optional = true }
tokio-snappy = { version = "0.2", optional = true}
snap = { version = "1", optional = true}
async-compression = { version = "0.3.12", features = ["deflate", "tokio"] }
url = "2.2.2"

[dev-dependencies]
tracing-subscriber = "0.3"

[features]
default = ["tls-tokio", "snappy", "deflate"]
snappy = ["snap", "tokio-snappy"]
deflate = ["flate2"]
tls-native = ["tokio-native-tls"]
tls-tokio = ["tokio-rustls"]
